Fix make dist and friends
- Run tests with tox.
- Install bundle.xsd with setuptools instead of autotools.
- Include requirements.txt in distribution.
- Prefix explicit source directory to paths in setup.py
- It is not recommended to have an __init__.py in tests/
- Clean up setuptools build directory.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include LICENSE CREDITS
 include bundle/* doc/*
 recursive-include opendiamond *.html *.css *.js *.gif *.png
+recursive-include tests *.py
