--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ setenv =
     LANG=en_US.UTF-8
     PYTHONPATH = {toxinidir}
 commands =
-     py.test -v --timeout=30 --duration=10
+     py.test -v --timeout=30 --duration=10 {posargs}
 deps =
      -r{toxinidir}/requirements.txt
 
