--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,6 @@ flake8>=3.0.4
 pylint>=1.5.6
 pylint-django>=0.7.2
 pytest>=2.9.2
+pytest-catchlog>=1.2.2
 pytest-runner>=2.11.1
 pytest-timeout>=1.0.0
