setup.py:data_files works inconsistent
When building with `setup.py install` the files get installed in
the python package directory. But when we install as a 'flat' egg
using `setup.py install --single-version-externally-managed` they
are installed under `${prefix}`.

Moving `bundle.xsd` into the opendiamond python package directory
so that we can use package_data to install the file which does seem
to install to the same place consistently.

--- a/Makefile.am
+++ b/Makefile.am
@@ -73,6 +73,8 @@ nobase_noinst_PYTHON = \
 	tests/test_cookies.py
 
 nobase_dist_noinst_DATA = \
+	opendiamond/bundle.xsd \
+	opendiamond/bundle.xslt \
 	opendiamond/hashmodule.c \
 	opendiamond/blaster/static/json-blaster.js \
 	opendiamond/blaster/static/json-blaster-autopause.js \
@@ -106,8 +108,6 @@ EXTRA_DIST = CREDITS LICENSE INSTALL README.txt \
 	setup.py setup.cfg MANIFEST.in \
 	requirements.txt \
 	pylintrc tox.ini \
-	bundle/bundle.xsd \
-	bundle/bundle.xslt \
 	doc/diamond-protocol.xml \
 	tools/volcano
 
