--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,3 @@
-include LICENSE CREDITS
-include bundle/* doc/*
-recursive-include opendiamond *.html *.css *.js *.gif *.png
+include LICENSE CREDITS doc/*
+recursive-include opendiamond *.html *.css *.js *.gif *.png *.xsd *.xslt
 recursive-include tests *.py
