Use socat to communicate with diamond-filter over a tcp port Fix the word splitting pitfall when passing arguments to socat EXEC.

--- a/docker/Dockerfile.jessie
+++ b/docker/Dockerfile.jessie
@@ -27,3 +27,5 @@ RUN git clone https://github.com/cmusatyalab/opendiamond.git /usr/src/opendiamon
  && ldconfig
 
 COPY ./build-filter-wrappers.sh /
+COPY ./diamond-init.sh /
+EXPOSE 5555
