--- a/docker/Dockerfile.centos7
+++ b/docker/Dockerfile.centos7
@@ -22,6 +22,7 @@ RUN yum -y install \
     python-setuptools \
     python-xml2rfc \
     python2-simplejson \
+    socat \
  && yum -y clean all
 
 RUN git clone https://github.com/cmusatyalab/opendiamond.git /usr/src/opendiamond \
