--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+docker==2.4.2
 # opendiamond core
 pip>=1.5.6
+
+# If encountered "undefined symbol: SSLv2_method", try uninstalling the pip version and (re)installing M2Crypto from apt.
 M2Crypto==0.25.1
+
 Pillow==4.0.0
 lxml==3.7.3
 python-dateutil==2.6.0
