Don't cache opendiamond source
Since we only refresh the cache in setup and share it between all jobs
on the same branch, when a build is retried later it build against
whichever version of opendiamond happened to be build last instead of
the checked out tree. So we shouldn't try to cache the source.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,27 +9,29 @@ stages:
 variables:
   DOCKER_DRIVER: overlay
 
-before_script:
-  - docker info
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-
 cache:
   paths:
     - .cache/
-    - docker/opendiamond-HEAD.tar.gz
     - docker/tini
+
+before_script:
+  - docker info
+  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+  - mkdir -p .cache/apk && ln -sf `pwd`/.cache/apk /etc/apk/cache
 
 setup_cache:
   stage: setup
   script:
-    - mkdir -p .cache/apk && ln -sf `pwd`/.cache/apk /etc/apk/cache
-    - apk update && apk add git tini-static && cp /sbin/tini-static docker/tini
-    - git archive --output=docker/opendiamond-HEAD.tar.gz HEAD
+    - apk update
+    - apk add git tini-static
+    - cp /sbin/tini-static docker/tini
 
 
 .docker_build_template: &docker_build
   stage: build
   script:
+    - apk add git
+    - git archive --output=docker/opendiamond-HEAD.tar.gz HEAD
     - docker pull $IMAGE_TAG:$DIST || true
     - docker build --pull --cache-from $IMAGE_TAG:$DIST -t $IMAGE_TAG:$DIST -f docker/Dockerfile.$DIST docker
     - docker push $IMAGE_TAG:$DIST
