--- a/docker/Dockerfile.centos7
+++ b/docker/Dockerfile.centos7
@@ -27,6 +27,7 @@ RUN yum -y install \
     python-setuptools \
     python-xml2rfc \
     python2-simplejson \
+    python-yaml \
     socat \
  && yum -y clean all
 
@@ -37,4 +38,4 @@ RUN cd /usr/src/opendiamond && autoreconf -f -i \
  && ./configure --prefix=/usr --libdir=/usr/lib64 && make install && make clean \
  && ldconfig
 
-COPY extract-filters.sh /
+COPY extract-filters extract-filters.sh /
