--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ werkzeug==0.12.2
 av==0.3.3
 
 # dataretriever-mysql
-mysql-connector-python-rf==2.2.2
+mysql-connector-python==8.0.6
 
 # diamondd
 docker==2.4.2
@@ -37,7 +37,7 @@ redis==2.10.5
 xmltodict==0.11.0
 
 # scopeserver
-Django==1.5.12
+# Django==1.3.7
 
 # testing
 flake8>=3.0.4
