--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,7 +1,7 @@
 IMAGEID ?= registry.cmusatyalab.org/diamond/opendiamond/dev
 SRC_TAR ?= opendiamond-HEAD.tar.gz
 TINI_VERSION ?= v0.15.0
-DISTRIBUTIONS = centos6 centos7 jessie stretch xenial
+DISTRIBUTIONS = xenial stretch jessie centos6 centos7
 
 
 all: tini
