--- a/docker/Dockerfile.xenial
+++ b/docker/Dockerfile.xenial
@@ -9,7 +9,8 @@ ENV LANG=C.UTF-8
 
 # we need multiverse for xml2rfc
 RUN sed -i "s/xenial main/xenial main multiverse/" /etc/apt/sources.list \
- && apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+ && apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     automake \
     build-essential \
     desktop-file-utils \
@@ -24,7 +25,8 @@ RUN sed -i "s/xenial main/xenial main multiverse/" /etc/apt/sources.list \
     python-pil \
     python-setuptools \
     socat \
-    xml2rfc
+    xml2rfc \
+ && rm -rf /var/lib/apt/lists/*
 
 ADD opendiamond-HEAD.tar.gz /usr/src/opendiamond
 
