--- a/docker/Dockerfile.xenial
+++ b/docker/Dockerfile.xenial
@@ -7,9 +7,7 @@ CMD ["/bin/sh"]
 
 ENV LANG=C.UTF-8
 
-# we need multiverse for xml2rfc
-RUN sed -i "s/xenial main/xenial main multiverse/" /etc/apt/sources.list \
- && apt-get update \
+RUN apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     automake \
     build-essential \
