refactor extract-filter script

--- a/docker/Dockerfile.centos6
+++ b/docker/Dockerfile.centos6
@@ -38,4 +38,4 @@ RUN cd /usr/src/opendiamond && autoreconf -f -i \
  && ./configure --prefix=/usr --libdir=/usr/lib64 && make install && make clean \
  && ldconfig
 
-COPY extract-filters extract-filters.sh /
+COPY extract-filters /usr/local/bin
