--- a/docker/Dockerfile.jessie
+++ b/docker/Dockerfile.jessie
@@ -35,4 +35,4 @@ RUN cd /usr/src/opendiamond && autoreconf -f -i \
  && ./configure && make install && make clean \
  && ldconfig
 
-COPY extract-filters extract-filters.sh /
+COPY extract-filters /usr/local/bin
