--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 #  The OpenDiamond Platform for Interactive Search
 #
-#  Copyright (c) 2007-2011 Carnegie Mellon University
+#  Copyright (c) 2007-2019 Carnegie Mellon University
 #  All rights reserved.
 #
 #  This software is distributed under the terms of the Eclipse Public
@@ -9,7 +9,7 @@
 #  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
 #
 
-AC_INIT([OpenDiamond], [9.0.1-dev], [diamond@cs.cmu.edu], [opendiamond], [http://diamond.cs.cmu.edu/])
+AC_INIT([OpenDiamond], [9.0.1], [diamond@cs.cmu.edu], [opendiamond], [http://diamond.cs.cmu.edu/])
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([foreign 1.11.1 subdir-objects])
 AM_SILENT_RULES([yes])
