Bug fix opendiamond.filter for Py3. Tested with image filters.

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,7 +1,7 @@
 IMAGEID ?= registry.cmusatyalab.org/diamond/opendiamond/dev
 SRC_TAR ?= opendiamond-HEAD.tar.gz
-TINI_VERSION ?= v0.15.0
-DISTRIBUTIONS = xenial stretch jessie centos6 centos7
+TINI_VERSION ?= v0.16.1
+DISTRIBUTIONS = buster # xenial stretch jessie centos6 centos7
 
 
 all: tini
