--- a/environment.yml
+++ b/environment.yml
@@ -4,22 +4,22 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - appdirs=1.4.3=py_1
+  - appdirs=1.4.3=py37h28b3542_0
   - asn1crypto=1.0.1=py37_0
   - astroid=2.3.1=py37_0
-  - ca-certificates=2019.9.11=hecc5488_0
+  - ca-certificates=2019.8.28=0
   - certifi=2019.9.11=py37_0
-  - cffi=1.12.3=py37h8022711_0
+  - cffi=1.12.3=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
-  - click=7.0=py_0
+  - click=7.0=py37_0
   - contextlib2=0.6.0=py_0
-  - cryptography=2.7=py37h72c5cf5_0
+  - cryptography=2.7=py37h1ba5d50_0
   - docker-py=4.1.0=py37_0
   - docker-pycreds=0.4.0=py_0
   - flask=1.1.1=py_1
-  - idna=2.8=py37_1000
+  - idna=2.8=py37_0
   - isort=4.3.21=py37_0
-  - itsdangerous=1.1.0=py_0
+  - itsdangerous=1.1.0=py37_0
   - jinja2=2.10.3=py_0
   - krb5=1.16.1=h173b8e3_7
   - lazy-object-proxy=1.4.2=py37h7b6447c_0
@@ -27,17 +27,17 @@ dependencies:
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
-  - libssh2=1.8.2=h22169c7_2
+  - libssh2=1.8.2=h1ba5d50_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - m2crypto=0.35.2=py37h72c5cf5_0
-  - markupsafe=1.1.1=py37h14c3975_0
+  - markupsafe=1.1.1=py37h7b6447c_0
   - mccabe=0.6.1=py37_1
   - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1c=h516909a_0
+  - openssl=1.1.1d=h7b6447c_3
   - packaging=19.2=py_0
   - pip=19.2.3=py37_0
   - psutil=5.6.3=py37h516909a_0
-  - pycparser=2.19=py37_1
+  - pycparser=2.19=py37_0
   - pycurl=7.43.0.3=py37h16ce93b_0
   - pylint=2.4.2=py37_0
   - pyopenssl=19.0.0=py37_0
@@ -48,20 +48,20 @@ dependencies:
   - raven=6.10.0=py_0
   - readline=7.0=h7b6447c_5
   - redis-py=3.3.10=py_0
-  - requests=2.22.0=py37_1
+  - requests=2.22.0=py37_0
   - setuptools=41.4.0=py37_0
   - simplejson=3.16.0=py37h14c3975_1002
   - six=1.12.0=py37_0
   - sqlite=3.30.0=h7b6447c_0
   - tk=8.6.8=hbc83047_0
-  - urllib3=1.25.6=py37_0
+  - urllib3=1.24.2=py37_0
   - websocket-client=0.56.0=py37_0
   - werkzeug=0.16.0=py_0
   - wheel=0.33.6=py37_0
   - wrapt=1.11.2=py37h7b6447c_0
   - xmltodict=0.12.0=py_0
   - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=h14c3975_1001
+  - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - future==0.18.0
@@ -69,4 +69,5 @@ dependencies:
     - murmurhash3==2.3.5
     - pillow==6.2.0
     - python-dateutil==2.8.0
+prefix: /home/zf/miniconda2/envs/diamond-py3
 
