--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,8 @@ dependencies:
   - appdirs=1.4.3=py37h28b3542_0
   - asn1crypto=1.0.1=py37_0
   - astroid=2.3.1=py37_0
-  - ca-certificates=2019.8.28=0
+  - bzip2=1.0.8=h516909a_1
+  - ca-certificates=2019.9.11=hecc5488_0
   - certifi=2019.9.11=py37_0
   - cffi=1.12.3=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
@@ -16,24 +17,33 @@ dependencies:
   - cryptography=2.7=py37h1ba5d50_0
   - docker-py=4.1.0=py37_0
   - docker-pycreds=0.4.0=py_0
+  - ffmpeg=4.2=h167e202_0
   - flask=1.1.1=py_1
+  - freetype=2.10.0=he983fc9_1
+  - gmp=6.1.2=hf484d3e_1000
+  - gnutls=3.6.5=hd3a4fd2_1002
   - idna=2.8=py37_0
   - isort=4.3.21=py37_0
   - itsdangerous=1.1.0=py37_0
   - jinja2=2.10.3=py_0
   - krb5=1.16.1=h173b8e3_7
+  - lame=3.100=h14c3975_1001
   - lazy-object-proxy=1.4.2=py37h7b6447c_0
   - libcurl=7.65.3=h20c2e04_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libiconv=1.15=h516909a_1005
+  - libpng=1.6.37=hed695b0_0
   - libssh2=1.8.2=h1ba5d50_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - m2crypto=0.35.2=py37h72c5cf5_0
   - markupsafe=1.1.1=py37h7b6447c_0
   - mccabe=0.6.1=py37_1
   - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1d=h7b6447c_3
+  - nettle=3.4.1=h1bed415_1002
+  - openh264=1.8.0=hdbcaa40_1000
+  - openssl=1.1.1c=h516909a_0
   - packaging=19.2=py_0
   - pip=19.2.3=py37_0
   - psutil=5.6.3=py37h516909a_0
@@ -59,6 +69,7 @@ dependencies:
   - werkzeug=0.16.0=py_0
   - wheel=0.33.6=py37_0
   - wrapt=1.11.2=py37h7b6447c_0
+  - x264=1!152.20180806=h14c3975_0
   - xmltodict=0.12.0=py_0
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
@@ -69,5 +80,4 @@ dependencies:
     - murmurhash3==2.3.5
     - pillow==6.2.0
     - python-dateutil==2.8.0
-prefix: /home/zf/miniconda2/envs/diamond-py3
 
