--- a/docker/Dockerfile.buster
+++ b/docker/Dockerfile.buster
@@ -5,7 +5,9 @@ COPY tini /tini
 ENTRYPOINT ["/tini", "-g", "--"]
 CMD ["/bin/sh"]
 
-RUN apt-get update \
+# we need non-free for xml2rfc
+RUN sed -i "s/buster main/buster main non-free/" /etc/apt/sources.list \
+   && apt-get update \
    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
       automake \
       build-essential \
@@ -13,12 +15,14 @@ RUN apt-get update \
       git \
       libglib2.0-dev \
       libtool \
+      xml2rfc \
    && apt-get clean \
    && rm -rf /var/lib/apt/lists/*
 
 ADD opendiamond-HEAD.tar.gz /usr/src/opendiamond
 
 RUN cd /usr/src/opendiamond \
+   && autoreconf -f -i && ./configure && make install && make clean \
    && conda env update -f environment.yml -n base \
    && python setup.py install \
    && rm -rf build dist *.egg-info \
