--- a/docker/Dockerfile.buster
+++ b/docker/Dockerfile.buster
@@ -1,4 +1,21 @@
-FROM continuumio/miniconda3
+FROM debian:buster
+
+# Install miniconda, reference: https://hub.docker.com/r/continuumio/miniconda3/dockerfile
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
+ENV PATH /opt/conda/bin:$PATH
+
+RUN apt-get update --fix-missing && \
+    apt-get install -y wget bzip2 ca-certificates curl git && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh -O ~/miniconda.sh && \
+    /bin/bash ~/miniconda.sh -b -p /opt/conda && \
+    rm ~/miniconda.sh && \
+    /opt/conda/bin/conda clean -tipsy && \
+    ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
+    echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc && \
+    echo "conda activate base" >> ~/.bashrc
 
 # Add Tini
 COPY tini /tini
@@ -23,7 +40,8 @@ ADD opendiamond-HEAD.tar.gz /usr/src/opendiamond
 
 RUN cd /usr/src/opendiamond \
    && autoreconf -f -i && ./configure && make install && make clean \
-   && conda env update -f environment.yml -n base \
+   && conda install -c conda-forge m2crypto \
+   && conda install -c anaconda pyyaml \
    && python setup.py install \
    && rm -rf build dist *.egg-info \
    && conda clean --all -y
