--- a/docker/Dockerfile.xenial
+++ b/docker/Dockerfile.xenial
@@ -1,36 +1,48 @@
 FROM ubuntu:xenial
 
+# Install miniconda, reference: https://hub.docker.com/r/continuumio/miniconda3/dockerfile
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
+ENV PATH /opt/conda/bin:$PATH
+
+RUN apt-get update --fix-missing && \
+    apt-get install -y wget bzip2 ca-certificates curl git && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh -O ~/miniconda.sh && \
+    /bin/bash ~/miniconda.sh -b -p /opt/conda && \
+    rm ~/miniconda.sh && \
+    /opt/conda/bin/conda clean -tipsy && \
+    ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
+    echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc && \
+    echo "conda activate base" >> ~/.bashrc
+
 # Add Tini
 COPY tini /tini
 ENTRYPOINT ["/tini", "-g", "--"]
 CMD ["/bin/sh"]
 
-ENV LANG=C.UTF-8
-
+# we need non-free for xml2rfc
 RUN apt-get update \
- && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-    automake \
-    build-essential \
-    desktop-file-utils \
-    git \
-    libglib2.0-dev \
-    libtool \
-    python \
-    python-dateutil \
-    python-dev \
-    python-lxml \
-    python-m2crypto \
-    python-pil \
-    python-setuptools \
-    python-yaml \
-    socat \
-    xml2rfc \
- && rm -rf /var/lib/apt/lists/*
+   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+      automake \
+      build-essential \
+      desktop-file-utils \
+      git \
+      libglib2.0-dev \
+      libtool \
+      xml2rfc \
+   && apt-get clean \
+   && rm -rf /var/lib/apt/lists/*
 
 ADD opendiamond-HEAD.tar.gz /usr/src/opendiamond
 
-RUN cd /usr/src/opendiamond && autoreconf -f -i \
- && ./configure && make install && make clean \
- && ldconfig
+RUN cd /usr/src/opendiamond \
+   && autoreconf -f -i && ./configure && make install && make clean \
+   && conda install -c conda-forge m2crypto \
+   && conda install -c anaconda pyyaml \
+   && python setup.py install \
+   && rm -rf build dist *.egg-info \
+   && conda clean --all -y
 
 COPY extract-filters /usr/local/bin
