Fix docker image builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ setup_cache:
     - apk update
     - apk add git tini-static
     - cp /sbin/tini-static docker/tini
-
+    - curl https://repo.anaconda.com/miniconda/Miniconda3-4.7.12.1-Linux-x86_64.sh > docker/miniconda.sh
 
 .docker_build_template: &docker_build
   stage: build
