Simplify CI builds
Move fetching of miniconda and tini into dockerfiles

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,6 @@ variables:
 cache:
   paths:
     - .cache/
-    - docker/miniconda.sh
-    - docker/tini
 
 before_script:
   - docker info
@@ -25,9 +23,7 @@ setup_cache:
   stage: setup
   script:
     - apk update
-    - apk add curl git tini-static
-    - cp /sbin/tini-static docker/tini
-    - curl https://repo.anaconda.com/miniconda/Miniconda3-4.7.12.1-Linux-x86_64.sh > docker/miniconda.sh
+    - apk add git
 
 .docker_build_template: &docker_build
   stage: build
