--- a/docker/Dockerfile.buster
+++ b/docker/Dockerfile.buster
@@ -1,11 +1,17 @@
 FROM debian:buster
 
-ARG MINICONDA_VERSION 4.7.12.1
-ARG TINI_VERSION v0.16.1
+ARG MINICONDA_VERSION=4.7.12.1
+ARG TINI_VERSION=v0.16.1
 
 # Install miniconda, reference: https://hub.docker.com/r/continuumio/miniconda3/dockerfile
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 ENV PATH /opt/conda/bin:$PATH
+
+RUN apt-get update --fix-missing \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+      curl \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
 
 RUN curl -fLs -o /miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh \
  && /bin/bash /miniconda.sh -b -p /opt/conda \
