--- a/docker/Dockerfile.centos6
+++ b/docker/Dockerfile.centos6
@@ -1,10 +1,9 @@
 FROM centos:centos6
 
-ARG MINICONDA_VERSION 4.7.12.1
-ARG TINI_VERSION v0.16.1
+ARG MINICONDA_VERSION=4.7.12.1
+ARG TINI_VERSION=v0.16.1
 
 # Install miniconda, reference: https://hub.docker.com/r/continuumio/miniconda3/dockerfile
-ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 ENV PATH /opt/conda/bin:$PATH
 
 RUN curl -fLs -o /miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh \
