--- a/docker/Dockerfile.centos7
+++ b/docker/Dockerfile.centos7
@@ -1,7 +1,7 @@
 FROM centos:centos7
 
-ARG MINICONDA_VERSION 4.7.12.1
-ARG TINI_VERSION v0.16.1
+ARG MINICONDA_VERSION=4.7.12.1
+ARG TINI_VERSION=v0.16.1
 
 # Install miniconda, reference: https://hub.docker.com/r/continuumio/miniconda3/dockerfile
 # ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
