--- a/docker/Dockerfile.buster
+++ b/docker/Dockerfile.buster
@@ -9,6 +9,7 @@ ENV PATH /opt/conda/bin:$PATH
 
 RUN apt-get update --fix-missing \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+      ca-certificates \
       curl \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
